src/styles/Github.css
ul {
    list-style: none;
}
.commit-card {
display: grid;
grid-template-columns: 1fr;
grid-template-rows: 2fr 1fr 1fr;
align-content: center;
padding: 2px;    
box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
border-radius: 10px;
transition: 0.3s;
width: 80%;
overflow: auto;
height: 22vh;  
margin: 2vh auto 2vh;
line-height: 1; 
background: whitesmoke; 
}

.commit-text {
    margin-top: 2vh;
}

.commit-list {
    margin-top: 2vh;
}

.refresh {
    position: relative;
}

